--- a/src/app/components/tutorias-feed/tutorias-feed.html
+++ b/src/app/components/tutorias-feed/tutorias-feed.html
@@ -24,12 +24,13 @@
             </div>
             
             <div class="post-feed">
+                @if (isAdmin) {
                 <!-- Botón para crear nueva tutoría -->
                 <div class="create-post">
                     <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" class="post-avatar">
                     <input type="text" class="post-input" placeholder="Crear nueva tutoría" routerLink="/tutoria-form" readonly>
                 </div>
-                
+            }
                 <!-- Lista dinámica de tutorías -->
                 @for (tutoria of tutoriasFiltradas; track tutoria.uuid) {
                 <div class="post">
@@ -50,6 +51,7 @@
                         <p>{{ tutoria.cuerpo }}</p>
                     </div>
                     
+                    @if (isAdmin) {
                     <!-- Botones de acciones -->
                     <div class="post-actions">
                         <button (click)="eliminarTutoria(tutoria.uuid)" class="delete-btn">
@@ -58,7 +60,7 @@
                         <button (click)="editarTutoria(tutoria)" class="edit-btn">
                             ✏️ Editar
                         </button>
-                    </div>
+                    </div>}  
                 </div>
                 } @empty {
                 <div class="post">
