--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -29,7 +29,7 @@
 
                  @if (isAdmin) {
                 <div class="create-post">
-                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" style="width: 40px; height: 40px; border-radius: 50%;">
+                    <img src="https://pbs.twimg.com/profile_images/1881177470616907776/e2WyqeAN_400x400.jpg" alt="Usuario" style="width: 40px; height: 40px; border-radius: 50%;">
                     <input type="text" class="post-input" placeholder="Comparte un anuncio" routerLink="/post-form" readonly>
                 </div>
               }
@@ -37,7 +37,7 @@
              @for (anuncio of anunciosFiltrados; track anuncio.uuid) {
 <div class="post">
   <div class="post-header">
-    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" class="post-avatar">
+    <img src="https://pbs.twimg.com/profile_images/1881177470616907776/e2WyqeAN_400x400.jpg" alt="Usuario" class="post-avatar">
     <div>
       <div class="post-user">{{ anuncio.nombre }} (@{{ anuncio.usuario }})</div>
       <div class="post-meta">{{ formatDate(anuncio.fechaHora) }}</div>
