--- a/src/app/components/tutorias-feed/tutorias-feed.html
+++ b/src/app/components/tutorias-feed/tutorias-feed.html
@@ -27,7 +27,7 @@
                 @if (isAdmin) {
                 <!-- Botón para crear nueva tutoría -->
                 <div class="create-post">
-                    <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" class="post-avatar">
+                    <img src="https://pbs.twimg.com/profile_images/1881177470616907776/e2WyqeAN_400x400.jpg" alt="Usuario" class="post-avatar">
                     <input type="text" class="post-input" placeholder="Crear nueva tutoría" routerLink="/tutoria-form" readonly>
                 </div>
             }
@@ -35,7 +35,7 @@
                 @for (tutoria of tutoriasFiltradas; track tutoria.uuid) {
                 <div class="post">
                     <div class="post-header">
-                        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Usuario" class="post-avatar">
+                        <img src="https://pbs.twimg.com/profile_images/1881177470616907776/e2WyqeAN_400x400.jpg" alt="Usuario" class="post-avatar">
                         <div>
                             <div class="post-user">{{ tutoria.nombre }} (@{{ tutoria.usuario }})</div>
                             <div class="post-meta">{{ formatDate(tutoria.fechaHora) }} | {{ tutoria.carrera }}</div>
