--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -39,7 +39,7 @@
   <div class="post-header">
     <img src="https://pbs.twimg.com/profile_images/1881177470616907776/e2WyqeAN_400x400.jpg" alt="Usuario" class="post-avatar">
     <div>
-      <div class="post-user">{{ anuncio.nombre }} (@{{ anuncio.usuario }})</div>
+      <div class="post-user">{{ anuncio.nombre }}</div>
       <div class="post-meta">{{ formatDate(anuncio.fechaHora) }}</div>
     </div>
   </div>
