--- a/src/app/components/tutorias-feed/tutorias-feed.html
+++ b/src/app/components/tutorias-feed/tutorias-feed.html
@@ -37,7 +37,7 @@
                     <div class="post-header">
                         <img src="https://pbs.twimg.com/profile_images/1881177470616907776/e2WyqeAN_400x400.jpg" alt="Usuario" class="post-avatar">
                         <div>
-                            <div class="post-user">{{ tutoria.nombre }} (@{{ tutoria.usuario }})</div>
+                            <div class="post-user">{{ tutoria.nombre }}</div>
                             <div class="post-meta">{{ formatDate(tutoria.fechaHora) }} | {{ tutoria.carrera }}</div>
                         </div>
                     </div>
