--- a/src/app/layouts/navbar/navbar.html
+++ b/src/app/layouts/navbar/navbar.html
@@ -44,6 +44,7 @@
   <a class="navbar-link">Más <span class="dropdown-arrow">▼</span></a>
   <div class="dropdown-content">
     <a class="dropdown-item"  (click)="cerrarSesion()">Cerrar Sesión</a>
+    <a routerLink="/profile" class="navbar-link" (click)="onNavLinkClick()"> Perfil</a>
   </div>
 </li>
     </ul>
