--- a/src/app/layouts/navbar/navbar.html
+++ b/src/app/layouts/navbar/navbar.html
@@ -45,6 +45,9 @@
   <div class="dropdown-content">
     <a class="dropdown-item"  (click)="cerrarSesion()">Cerrar Sesión</a>
     <a routerLink="/profile" class="navbar-link" (click)="onNavLinkClick()"> Perfil</a>
+@if (isAdmin) {
+    <a routerLink="/user-admin" class="navbar-link" (click)="onNavLinkClick()"> Administración de Usuarios</a>
+}
   </div>
 </li>
     </ul>
