--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -58,9 +58,9 @@
     <footer>
         <p>&copy; 2025 Portal Universitario CEUTEC - Todos los derechos reservados.</p>
         <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Ceutechn"><i class="fab fa-facebook"></i></a>
+            <a href="https://x.com/ceutec_hn"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/ceutec_hn"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
 </body>
