--- a/src/app/components/post-feed/post-feed.html
+++ b/src/app/components/post-feed/post-feed.html
@@ -19,7 +19,10 @@
                 <div class="header-actions">
                     <span class="header-icon">💬 <span class="badge">3</span></span>
                     <span class="header-icon">🔔 <span class="badge">7</span></span>
-                    <span class="header-icon">📩</span>
+                    <a href="https://m365.cloud.microsoft/chat" target="_blank">
+  <span class="header-icon">📩</span>
+</a>
+
                 </div>
             </div>
             
