--- a/src/app/components/profile/profile.html
+++ b/src/app/components/profile/profile.html
@@ -5,7 +5,12 @@
       <h1>👤 Mi Perfil</h1>
       <p>Información de tu cuenta universitaria</p>
     </div>
+     <div class="imagenHome">
+  <img src="https://www.unitec.edu/assets/img/howie-pc.png?ver=1.0.1" alt="Texto alternativo">
+</div>
   </div>
+ 
+
 
   <!-- Loading -->
   @if (loading) {
