--- a/src/app/components/profile/profile.scss
+++ b/src/app/components/profile/profile.scss
@@ -34,6 +34,22 @@
     max-width: 100%;
     margin: 0 auto;
   }
+
+  .imagenHome {
+  text-align: center; 
+  margin-top: 20px;
+  max-width: 100%;   /* el contenedor no se pasa de la pantalla */
+  overflow: hidden;  /* oculta si algo se pasa */
+}
+
+.imagenHome img {
+  width: 200px !important;  /* 👈 bien pequeña y forzado */
+  height: auto !important;
+  display: block;
+  margin: 0 auto;          /* centra la imagen */
+  max-width: 100%;         /* nunca más grande que el contenedor */
+}
+
   
   h1 {
     color: var(--text-primary);
